--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
                                         class="mt-4 text-4xl tracking-tight font-extrabold text-white sm:mt-5 sm:text-6xl lg:mt-6 xl:text-6xl">
                                         <span class="block">A better way to</span>
                                         <span
-                                            class="bg-clip-text text-transparent bg-gradient-to-r from-teal-200 to-cyan-400 block">ship
-                                            web apps</span>
+                                            class="bg-clip-text text-transparent bg-gradient-to-r from-teal-200 to-cyan-400 block">use you time</span>
                                     </h1>
                                     <p class="mt-3 text-base text-gray-300 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">
                                         Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui Lorem cupidatat
